@@ -89,7 +89,7 @@ photoprint_LDADD = \
 	splashscreen/libsplashscreen.la	\
 	$(LIBINTL) $(LIBM_LIBS) $(GETOPT_LIBS) $(JPEG_LIBS) $(PNM_LIBS) $(TIFF_LIBS) $(LCMS_LIBS) $(GP_LIBS) $(GTK2_LIBS)
 
-check_PROGRAMS = menucheck carouselcheck
+check_PROGRAMS = menucheck carouselcheck misccheck
 
 menucheck_SOURCES = menucheck.cpp
 
@@ -107,6 +107,22 @@ menucheck_LDADD = \
 carouselcheck_SOURCES = carouselcheck.cpp
 
 carouselcheck_LDADD = \
+	effects/libppeffects.la	\
+	imagesource/libimagesource.la	\
+	support/libsupport.la	\
+	imageutils/libimageutils.la	\
+	miscwidgets/libmiscwidgets.la	\
+	profilemanager/libprofilemanager.la	\
+	stpui_widgets/libstpui_widgets.la	\
+	stp_support/libstp_support.la \
+	pixbufthumbnail/libpixbufthumbnail.la	\
+	splashscreen/libsplashscreen.la	\
+	$(LIBINTL) $(LIBM_LIBS) $(GETOPT_LIBS) $(JPEG_LIBS) $(PNM_LIBS) $(TIFF_LIBS) $(LCMS_LIBS) $(GP_LIBS) $(GTK2_LIBS)
+
+
+misccheck_SOURCES = misccheck.cpp pp_sigcontrol.cpp
+
+misccheck_LDADD = \
 	effects/libppeffects.la	\
 	imagesource/libimagesource.la	\
 	support/libsupport.la	\
